// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render Header component correctly 1`] = `
<DocumentFragment>
  <header>
    <a>
      <span
        data-testid="title_header"
      >
        Blog
      </span>
    </a>
    <nav>
      <ul
        class="nav__links"
      >
        <li>
          <a>
            Login
          </a>
        </li>
        <li>
          <a>
            Sign In
          </a>
        </li>
      </ul>
    </nav>
  </header>
</DocumentFragment>
`;

exports[`Should render Header component with props correctly 1`] = `
<DocumentFragment>
  <header>
    <a>
      <span
        data-testid="title_header"
      >
        Blog
      </span>
    </a>
    <nav>
      <ul
        class="nav__links"
      >
        <li>
          <a>
            New Blog
          </a>
        </li>
        <li>
          <a>
            <img
              class="nav__links_icon"
              src="64572.png"
            />
            User
          </a>
        </li>
        <li>
          <button
            class="nav__link_b"
          >
            Logout
          </button>
        </li>
      </ul>
    </nav>
  </header>
</DocumentFragment>
`;
